@@ -3,12 +3,12 @@
   "uniques": 2,
   "views": [
     {
-      "timestamp": "2022-08-16T00:00:00Z",
+      "timestamp": "2022-08-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2022-08-20T00:00:00Z",
+      "timestamp": "2022-08-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
