@@ -1,3 +1,11 @@
+2022-08-30T16:07:13Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2957792395
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 119 606 / 121 608
+* notice: next accum: outdated-unq outdated-all / unq all: 120 607 / 122 609
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-08-16] / [2022-08-30]
+
 2022-08-22T08:08:10Z:
 * notice: last 14d: unq all: 2 2
 * notice: prev accum: outdated-unq outdated-all / unq all: 118 604 / 121 608
